Fix styling of collapse expand section (#67)

--- a/src/clr-addons/collapse-expand-section/collapse-expand-section.scss
+++ b/src/clr-addons/collapse-expand-section/collapse-expand-section.scss
@@ -1,9 +1,13 @@
 @include exports('collapse-expand-section.clr-addons') {
-  .ces-title {
+  .ces-title h2 {
     margin-top: 0;
   }
 
-  .ces-subtitle {
+  .ces-subtitle h4 {
     margin-top: 0;
+  }
+
+  .ces-caret-btn {
+    line-height: 1rem;
   }
 }
